addgroup/removegroup hnappur ready

--- a/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
@@ -33,33 +33,36 @@
         <div class="feed-body">
             @using SozialWebApplication.Services
             @using SozialWebApplication.Models.Entities
+
+                <!--Add group to favorite or remove from favorite groups.-->
+                <div class="add-favgroup">
+
+                    @if (Model.GroupWithId.GroupName != "News Feed")
+                    {
+                        using (Html.BeginForm("NewsfeedGroups", "Home", FormMethod.Post))
+                        {
+
+                            if (!SozialWebApplication.Services.GroupService.Instance.IsUserInGroup(Model.GroupWithId.Id, User.Identity.Name))
+                            {
+                                <input type="hidden" name="hidden-groupId" value="@Model.GroupWithId.Id" />
+                                <input type="hidden" name="hidden-favgroup" value="add-group" />
+                                <input type="submit" value="" class="add-group" />
+                            }
+                            else
+                            {
+                                <input type="hidden" name="hidden-groupId" value="@Model.GroupWithId.Id" />
+                                <input type="hidden" name="hidden-favgroup" value="remove-group" />
+                                <input type="submit" value="" class="remove-group" />
+                            }
+
+                        }
+                    }
+                </div>
+        
             <div class="groupName">
                 <p>@Model.GroupWithId.GroupName</p>
             </div>
-        <!--Add group to favorite or remove from favorite groups.-->    
-        <div class="add-favgroup">
-          
-                @if (Model.GroupWithId.GroupName != "News Feed")
-                {
-                    using (Html.BeginForm("NewsfeedGroups", "Home", FormMethod.Post))
-                    {
-
-                        if(!SozialWebApplication.Services.GroupService.Instance.IsUserInGroup(Model.GroupWithId.Id, User.Identity.Name))
-                        {
-                             <input type="hidden" name="hidden-groupId" value="@Model.GroupWithId.Id" />
-                            <input type="hidden" name="hidden-favgroup" value="add-group" />
-                            <input type="submit" value="Add group to favorite" class="add-group" />
-                        }
-                        else
-                        {
-                           <input type="hidden" name="hidden-groupId" value="@Model.GroupWithId.Id" />
-                            <input type="hidden" name="hidden-favgroup" value="remove-group" />
-                            <input type="submit" value="Remove group from favorite" class="remove-group" /> 
-                        }
-
-                    }
-                }
-            </div>
+           
             <!--Post-->
             @using (Html.BeginForm("NewsfeedGroups", "Home", FormMethod.Post))
             {
