--- a/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
@@ -17,11 +17,11 @@
 }
 
 .groupName p{
-  font-size: 22px;
+ font-size: 22px;
   font-weight: bold;
-  float: left;
-  width: 61px;
-  margin-left: 550px;
+  margin-left: 569px;
+  margin-top: -1px;
+
 }
 
 .post-logo-settings {
@@ -135,7 +135,6 @@
 .comment {
     border-bottom: 1px solid #A8A8A8;
     padding-bottom: 2%;
-    
 }
 
 .comment-input {
@@ -221,27 +220,28 @@
 }
 
 .add-group {
-    background-image: url('/Myndir/addgroup.png');
-  background-size: 106%;
-  width: 54px;
-  height: 33px;
-  background-repeat: no-repeat;
+  background-image: url('/Myndir/add-group.jpg');
   cursor: pointer;
+  background-repeat: no-repeat;
+  height: 24px;
   border: none;
-  margin-top: 21px;
-  float: right;
-  margin-right: 503px;
+  margin-left: 1010px;
+  width: 160px;
+  margin-top: 8px;
+
 }
 
 .remove-group {
-  background-image: url('/Myndir/leavegroup.png');
-  background-size: 101%;
-  width: 54px;
-  height: 33px;
+  background-image: url('/Myndir/remove-group.jpg');
+cursor: pointer;
   background-repeat: no-repeat;
-  cursor: pointer;
+  height: 24px;
   border: none;
-  margin-top: 18px;
-  float: right;
-  margin-right: 503px;
+  margin-left: 978px;
+  width: 208px;
+  margin-top: 8px;
+}
+
+.group-and-button {
+    margin-bottom: 20px;
 }
