--- a/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
@@ -3,11 +3,12 @@
 }
 
 .information {
-     font-weight: bold;
-     margin-left: 42%;
-     position: absolute;
-     margin-top: 3%;
-     text-align: center;
+
+    font-weight: bold;
+    margin-left: 567px;
+    position: absolute;
+    margin-top: 5%;
+    text-align: center;
 }
 
 .namecard
