ownnamecard showing picture

--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/EditNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/EditNameCard.cshtml
@@ -42,7 +42,7 @@
                         <input type="text" name="input-los" id="input-los" class="text-input" placeholder=@Html.DisplayFor(model => model.userWithId.LineOfStudy) />
                         <label for="input-email" class="label">Email</label>
                         <input type="text" name="input-email" id="input-email" class="text-input" placeholder=@Html.DisplayFor(model => model.userWithId.Email) />
-                        <label for="input-picture" class="label">Name</label>
+                        <label for="input-picture" class="label">Profile picture</label>
                         <input type="text" name="input-picture" id="input-picture" class="text-input" placeholder="Paste image url here..." />
                     </div>
 
