--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/OwnNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/OwnNameCard.cshtml
@@ -45,7 +45,8 @@
                     <a href="~/Home/SearchGroups"><input type="button" class="groups" /></a>
                     <a href="~/NameCards/EditNameCard"><input type="button" class="edit" /></a>
                     <a href="~/Home/CheckMatch"><input type="button" class="match" /></a>
-</div>
+                    <img src="@Model.userWithId.ProfilePicture" alt="Profile picture">
+            </div>
 
         </div>
     </div>
