--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/OthersNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/OthersNameCard.cshtml
@@ -44,6 +44,7 @@
                     }
                     <p>@Html.DisplayFor(model => model.userWithId.LineOfStudy)</p>
                     <p>@Html.DisplayFor(model => model.userWithId.Email)</p>
+                    <img src="@Model.userWithId.ProfilePicture" alt="Profile picture">
                 </div>
                 <!--<input type="button" class="follow-others" />
         <input type="button" class="match-others" /> -->
