--- a/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
@@ -62,7 +62,7 @@
 .groups {
    margin-left: 67%;
    margin-top: 9%;
-   background-image: url('/Myndir/groups.png');
+   background-image: url('/Myndir/Groups.png');
    background-repeat: no-repeat;
    background-size: 100%;
    cursor: pointer;
