--- a/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
@@ -13,7 +13,7 @@
 
 .namecard
 {
-    margin-top: 5%;
+    margin-top: 2%;
 }
 
 .profile-picture {
@@ -23,7 +23,7 @@
 }
 
 .follow {
-   margin-left: 67%;
+   margin-left: 854px;
    background-image: url('/Myndir/Followers.png');
    background-repeat: no-repeat;
    background-size: 100%;
@@ -31,12 +31,11 @@
    border: none;
    width: 45px;
    height: 39px;
-   float: left;
 }
 
 .edit {
-   margin-top: 7%;
-   margin-left: 28%;
+   margin-top: 334px;
+   margin-left: 35px;
    background-image: url('/Myndir/Edit.png');
    background-repeat: no-repeat;
    background-size: 100%;
@@ -48,20 +47,18 @@
 }
 
 .match {
-   margin-left: 36%;
-   background-image: url('/Myndir/match.jpg');
-   background-repeat: no-repeat;
-   background-size: 100%;
-   cursor: pointer;
-   border: none;
-   width: 48px;
-   height: 39px;
-   float: left;
+    margin-left: 40px;
+  background-image: url('/Myndir/match.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  cursor: pointer;
+  border: none;
+  width: 48px;
+  height: 39px;
 }
 
 .groups {
-   margin-left: 67%;
-   margin-top: 9%;
+   margin-left: 48px;
    background-image: url('/Myndir/groups.png');
    background-repeat: no-repeat;
    background-size: 100%;
@@ -69,7 +66,6 @@
    border: none;
    width: 50px;
    height: 39px;
-   float: left;
 }
 
 .follow-others, .unfollow-others {
@@ -96,21 +92,6 @@
    height: 47px;
   margin-left: 66.5%;
   margin-top: 2%;
-}
-
-.match {
-margin-left: 67%;
-  margin-top: 12%;
-  /* margin-bottom: 4%; */
-  background-image: url('/Myndir/match.jpg');
-  background-repeat: no-repeat;
-  background-size: 100%;
-  cursor: pointer;
-  border: none;
-  width: 48px;
-  height: 39px;
-  float: left;
-  margin-top: -2%;
 }
 
 .match-others {
