--- a/SozialWebApplication/SozialWebApplication/Content/CSS/Search.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/Search.css
@@ -1,20 +1,23 @@
 ﻿/* GROUPS */
 
-.add-and-search {
+.add-and-search
+{
     margin-top: 2%;
 }
 
 /* Add new group */
 
-.adding-groups {
+.adding-groups
+{
     margin-right: 3%;
     text-align: center;
 }
 
-.addnewgroup-box {
+.addnewgroup-box
+{
     text-align: center;
     font-weight: bold;
-    background-image: url('/Myndir/input.jpg');
+    background-image: url('/Myndir/InputBoxBackground.jpg');
     border: 1px solid #ffd600;
     border-radius: 4px;
     line-height: 25px;
@@ -24,8 +27,9 @@
     margin-left: 10%;
 }
 
-.addnewgroup-button {
-    background-image: url(/Myndir/takkar.jpg);
+.addnewgroup-button
+{
+    background-image: url(/Myndir/ButtonBackground.jpg);
     background-repeat: no-repeat;
     border-radius: 4px;
     border-color: #faa61f;
@@ -39,16 +43,18 @@
 
 /* Search bar */
 
-.searching-groups {
+.searching-groups
+{
     margin-top: -5.5%;
     text-align: right;
     margin-right: 7%;
 }
 
-.search-groups-box {
+.search-groups-box
+{
     text-align: center;
     font-weight: bold;
-    background-image: url('/Myndir/input.jpg');
+    background-image: url('/Myndir/InputBoxBackground.jpg');
     border: 1px solid #ffd600;
     border-radius: 4px;
     line-height: 26px;
@@ -57,13 +63,15 @@
     margin-left: 37%;
 }
 
-.adding-groups-button, .searching-groups-button {
+.adding-groups-button, .searching-groups-button
+{
     margin-left: -1%;
     margin-bottom: 3%;
 }
 
-.search-groups-button {
-    background-image: url('/Myndir/search.jpg');
+.search-groups-button
+{
+    background-image: url('/Myndir/SearchButton.jpg');
     border: none;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -76,44 +84,50 @@
 
 /* Groups */
 
-.groups-lists {
+.groups-lists
+{
     margin-top: 5%;
     float: left;
     width: 33%;
 }
 
-.groups-labels {
+.groups-labels
+{
     text-decoration: underline;
 } 
 
-.my-groups-label, .all-groups-label, .search-groups-label {
+.my-groups-label, .all-groups-label, .search-groups-label
+{
     font-size: 20px;
 }
 
-.my-groups-list, .all-groups-list, .search-groups-list {
+.my-groups-list, .all-groups-list, .search-groups-list
+{
     text-align: center;
 }
 
 /* Search followers and groups - Display lists */
 
-.search-groups-list, .all-groups-list, .my-groups-list, .search-users-list, .all-users-list, .my-friends-list {
+.search-groups-list, .all-groups-list, .my-groups-list, .search-users-list, .all-users-list, .my-friends-list
+{
     text-decoration: none;
     font-size: 25px;
     font-weight: bold;
 }
 
-
 /* FOLLOWERS */
 
 /* Search bar */
 
-.searching-users {
+.searching-users
+{
     text-align: center;
     margin-right: 10%;
 }
 
-.search-users-box {
-    background-image: url('/Myndir/input.jpg');
+.search-users-box
+{
+    background-image: url('/Myndir/InputBoxBackground.jpg');
     border: 1px solid #ffd600;
     border-radius: 4px;
     line-height: 25px;
@@ -124,12 +138,14 @@
     margin-top: 2%;
 }
 
-.searching-users-button {
+.searching-users-button
+{
     margin-top: -2%;
 }
 
-.search-users-button {
-    background-image: url('/Myndir/search.jpg');
+.search-users-button
+{
+    background-image: url('/Myndir/SearchButton.jpg');
     border: none;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -142,20 +158,24 @@
 
 /* Users */
 
-.users-lists {
+.users-lists
+{
     margin-top: 5%;
     float: left;
     width: 33%;
 }
 
-.users-labels {
+.users-labels
+{
     text-decoration: underline;
 }
 
-.my-friends-label, .all-users-label, .search-users-label {
+.my-friends-label, .all-users-label, .search-users-label
+{
     font-size: 20px;
 }
 
-.my-friends-list, .all-users-list, .search-users-list {
+.my-friends-list, .all-users-list, .search-users-list
+{
     text-align: center;
 } 
