--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/EditNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/EditNameCard.cshtml
@@ -31,7 +31,7 @@
     <div class="overflowceeper">
         <div class="feed-body">
             <div class="edit-information">
-                <img src="/Myndir/myndlogo.jpg" class="profile-picture-edit" alt="profilepic">
+                <!--<img src="/Myndir/myndlogo.jpg" class="profile-picture-edit" alt="profilepic">-->
 
                 @using (Html.BeginForm("EditNameCard", "NameCards", FormMethod.Post))
                 {
