--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/OwnNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/OwnNameCard.cshtml
@@ -32,7 +32,7 @@
         <div class="feed-body">
             <div class="namecard">
                 <div class="information">
-                    <img src="/Myndir/myndlogo.jpg" class="profile-picture" alt="profilepic">
+                    <!--<img src="/Myndir/myndlogo.jpg" class="profile-picture" alt="profilepic">-->
                     <p>@Html.DisplayFor(model => model.userWithId.FullName)</p>
                     <p>@Html.DisplayFor(model => model.userWithId.LineOfStudy)</p>
 
