--- a/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
@@ -17,10 +17,10 @@
 }
 
 .groupName p{
- font-size: 22px;
+  font-size: 22px;
   font-weight: bold;
-  margin-left: 569px;
-  margin-top: -1px;
+  margin-left: 548px;
+  margin-top: 20px;
 
 }
 
@@ -76,7 +76,7 @@
 }
 
 .post-submit {
-  margin-left: 48%;
+  margin-left: 561px;
   margin-top: 1%;
   border-radius: 4px;
   border-color: #faa61f;
@@ -244,4 +244,10 @@ cursor: pointer;
 
 .group-and-button {
     margin-bottom: 20px;
+}
+
+.post
+{
+    border: 1px solid #A8A8A8;
+    margin-top: -50px;
 }
