--- a/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
@@ -1,147 +1,153 @@
-﻿.newsfeed {
+﻿.newsfeed 
+{
+    height: 167px;
+    margin-left: 10%;
+    margin-right: 10%;
     margin-top: 6%;
-  margin-left: 10%;
-  /*border: 1px solid black;*/
-  margin-right: 10%;
-  height: 167px;
+}
+
+.newsfeed > p 
+{
+    float: left;
+    font-size: 18px;
+    font-weight: bold;
+    margin-left: 39%;
+    margin-top: -5%;
+    width: 61px;
+}
+
+.groupName p
+{
+    font-size: 22px;
+    font-weight: bold;
+    margin-left: 548px;
+    margin-top: 20px;
 
 }
 
-.newsfeed > p {
-  font-size: 18px;
-  font-weight: bold;
-  margin-top: -5%;
-  margin-left: 39%;
-  float: left;
-  width: 61px;
+.post-logo-settings 
+{
+    margin-left: 363px;
+    width: 460px;
 }
 
-.groupName p{
-  font-size: 22px;
-  font-weight: bold;
-  margin-left: 548px;
-  margin-top: 20px;
-
-}
-
-.post-logo-settings {
-  width: 460px;
-  margin-left: 363px;
-}
-
-.input-text {
+.input-text 
+{
     background-image: url('/Myndir/TextLogo.png');
-    background-size: 100%;
-    width: 15%;
-    height: 50px;
     background-repeat: no-repeat;
-    cursor: pointer;
+    background-size: 100%;
     border: none;
+    cursor: pointer;
+    height: 50px; 
     margin-left: -228px;
+    width: 15%;
 }
 
-.input-img {
-  background-image: url('/Myndir/Mynd.png');
-  background-size: 100%;
-  width: 15%;
-  height: 50px;
-  background-repeat: no-repeat;
-  margin-top: 2%;
-  cursor: pointer;
-  border: none;
-  margin-left: 235px;
+.input-img 
+{
+    background-image: url('/Myndir/Mynd.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    border: none;
+    cursor: pointer;
+    height: 50px;
+    margin-left: 235px;
+    margin-top: 2%;
+    width: 15%;
 }
 
 .input-youtube {
-  background-image: url('/Myndir/Video.png');
-  background-size: 100%;
-  width: 15%;
-  height: 50px;
-  background-repeat: no-repeat;
-  margin-top: -10%;
-  cursor: pointer;
-  border: none;
-  margin-left: 239px;
+    background-image: url('/Myndir/Video.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    border: none;
+    cursor: pointer;
+    height: 50px;
+    margin-left: 239px;
+    margin-top: -10%;
+    width: 15%;
 }
-
-
 
 .post-input {
-  border: none;
-  width: 221px;
-  height: 102px;
-  font-size: 16px;
-  margin-left: 5%;
-  text-align: center;
+    border: none;
+    font-size: 16px;
+    height: 102px;
+    margin-left: 5%;
+    text-align: center;
+    width: 221px;
 }
 
-.post-submit {
-  margin-left: 561px;
-  margin-top: 1%;
-  border-radius: 4px;
-  border-color: #faa61f;
-  line-height: 25px;
-  width: 70px;
-  font-weight: bold;
-  background-image: url('/Myndir/takkar.jpg');
+.post-submit 
+{
+    background-image: url('/Myndir/takkar.jpg';
+    border-color: #faa61f;
+    border-radius: 4px;
+    font-weight: bold;
+    line-height: 25px;
+    margin-left: 561px;
+    margin-top: 1%;
+    width: 70px;
 }
 
 .all-posts {
-  margin-left: 33%;
-  margin-top: 5%;
-  margin-bottom: 5%;
+    margin-bottom: 5%;
+    margin-left: 33%;
+    margin-top: 5%;
 }
 
 .each-post {
-  border: 1px solid #A8A8A8;
-  margin-right: 13%;
-  margin-left: -35%;
-  padding-top: 2%;
+    border: 1px solid #A8A8A8;
+    margin-left: -35%;
+    margin-right: 13%;
+    padding-top: 2%;
 }
 
-.like-img {
-  background-image: url(https://scontent-lhr.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/10984151_10152737854342047_4597756465764730856_n.jpg?oh=efad8928292b2a614776c82d4860acfe&oe=55DF7DA4);
-  border: none;
-  margin-left: 92%;
-  background-size: 100%;
+.like-img 
+{
+  background-image: url('/Myndir/Like.png'));
   background-repeat: no-repeat;
-  width: 56px;
-  height: 56px;
-  margin-top: -5%;
+  background-size: 100%;
+  border: none;
   cursor: pointer;
+  height: 56px;
+  margin-left: 92%;
+  margin-top: -5%;
+  width: 56px;
 }
 
-.post-name {
-  margin-left: -32%;
-  margin-bottom: -4%;
-  font-weight: bold;
+.post-name 
+{
+    font-weight: bold;
+    margin-bottom: -4%;
+    margin-left: -32%;
 }
 
-.post-date {
-  margin-left: 70%;
-  margin-bottom: 0%;
-  font-weight: bold;
+.post-date 
+{
+    font-weight: bold;
+    margin-bottom: 0%;
+    margin-left: 70%;
 }
 
-.post-comment{
-  margin-left: -32%;
-  margin-top: 0%;
+.post-comment
+{
+    margin-left: -32%;
+    margin-top: 0%;
 }
 
-.number-of-likes {
-  margin-left: 94%;
+.number-of-likes 
+{
+    margin-left: 94%;
 }
 
-.comment {
+.comment 
+{
     border-bottom: 1px solid #A8A8A8;
     padding-bottom: 2%;
 }
 
-.comment-input {
-
-}
-
-.whole-each-post {
+.whole-each-post 
+{
     margin-bottom: 27%;
 }
 
@@ -151,98 +157,109 @@
 }
 
 .submit-comment {
- margin-left: 2%;
-  margin-top: 1%;
-  border-radius: 4px;
-  border-color: #faa61f;
-  line-height: 23px;
-  width: 50px;
-  font-weight: bold;
-  background-image: url('/Myndir/takkar.jpg');
+    background-image: url('/Myndir/takkar.jpg');
+    border-color: #faa61f;
+    border-radius: 4px;
+    font-weight: bold;
+    line-height: 23px;
+    margin-left: 2%;
+    margin-top: 1%;
+    width: 50px;
 }
 
-.comment-textarea {
-  float: left;
-  width: 92%;
-  border: none;
-  background-color: #FDEBB9;
-  resize: none;
+.comment-textarea 
+{
+    background-color: #FDEBB9;
+    border: none;
+    float: left;
+    resize: none;
+    width: 92%;
 }
 
-.CommentDisplay {
-  height: 98px;
-  width: 955px;
-  margin-top: 1%;
-  
+.CommentDisplay 
+{
+    height: 98px;
+    margin-top: 1%;
+    width: 955px;
 }
 
-.comment-form{
+.comment-form
+{
     background-color: #FDEBB9;
     padding: 1%;
 }
 
-.comment-info{
+.comment-info
+{
     display: inline;
 }
 
-.comment-post-date {
-    margin-top: -3%;
-    margin-left: 86%;
+.comment-post-date 
+{
     font-weight: bold;
+    margin-left: 86%;
+    margin-top: -3%;
 }
 
 .comment-post-name{
-    margin-left: 2%;
     font-weight: bold;
+    margin-left: 2%;
 }
-.photo-input{
+.photo-input
+{
+    border: none;
+    height: 103px;
     margin-left: 136px;
-    border: none;
-    height: 103px;
 }
 
-.video-input{
+.video-input
+{
+    border: none;
+    height: 103px;
     margin-left: 165px;
-    border: none;
-    height: 103px;
 }
 
-.post-size-settings-photo{
+.post-size-settings-photo
+{
     text-align: center;
 }
 
-.post-size-settings-photo img{
+.post-size-settings-photo img
+{
     width: 550px;
 }
 
-.post-size-settings-video{
+.post-size-settings-video
+{
     text-align: center;
 }
 
-.add-group {
-  background-image: url('/Myndir/AddGroup.jpg');
-  cursor: pointer;
-  background-repeat: no-repeat;
-  height: 24px;
-  border: none;
-  margin-left: 1010px;
-  width: 160px;
-  margin-top: 8px;
-
+.add-group 
+{
+    background-image: url('/Myndir/AddGroup.jpg');
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;   
+    height: 24px;
+    margin-left: 1010px;
+    margin-top: 8px;
+    width: 160px;
 }
 
-.remove-group {
-  background-image: url('/Myndir/RemoveGroup.jpg');
-cursor: pointer;
-  background-repeat: no-repeat;
-  height: 24px;
-  border: none;
-  margin-left: 978px;
-  width: 208px;
-  margin-top: 8px;
+.remove-group 
+{
+    background-image: url('/Myndir/RemoveGroup.jpg');
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    height: 24px;
+    margin-left: 978px;
+    margin-top: 8px;
+    width: 208px;
 }
 
-.group-and-button {
+.group-and-button 
+{
     margin-bottom: 20px;
 }
 
