--- a/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
@@ -113,6 +113,7 @@
    margin-top: 16%;
    margin-bottom: 4%;
    background-image: url('/Myndir/Match.png');
+   background-color: white;
    background-repeat: no-repeat;
    background-size: 100%;
    cursor: pointer;
