--- a/SozialWebApplication/SozialWebApplication/Content/CSS/Banner.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/Banner.css
@@ -49,6 +49,19 @@ h3
     text-decoration: none;
 }
 
+/*
+.my-name a
+{
+    text-decoration: none;
+    font-size: 50px;
+    color: black;
+    font-weight: bold;
+    margin-left: 38px;
+    position:absolute;
+    margin-top: 2%;
+}*/
+
+
 iframe
 {
     border: none;
