--- a/SozialWebApplication/SozialWebApplication/Content/CSS/Banner.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/Banner.css
@@ -43,22 +43,24 @@ h3
     color: black;
     font-size: 50px;
     font-weight: bold;
-    margin-left: 414px;
+    margin-left: 38px;
     margin-top: 2%;
     position:absolute;
     text-decoration: none;
 }
 
+
+
 /*
 .my-name a
 {
-    text-decoration: none;
-    font-size: 50px;
-    color: black;
-    font-weight: bold;
-    margin-left: 38px;
-    position:absolute;
-    margin-top: 2%;
+   // text-decoration: none;
+  //  font-size: 50px;
+   // color: black;
+  //  font-weight: bold;
+   // margin-left: 414px;
+  //  position:absolute;
+   // margin-top: 2%;
 }*/
 
 
