--- a/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
@@ -1,92 +1,13 @@
-﻿.newsfeed 
+﻿.add-group 
 {
-    height: 167px;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 6%;
-}
-
-.newsfeed > p 
-{
-    float: left;
-    font-size: 18px;
-    font-weight: bold;
-    margin-left: 39%;
-    margin-top: -5%;
-    width: 61px;
-}
-
-.groupName p
-{
-    font-size: 22px;
-    font-weight: bold;
-    margin-left: 548px;
-    margin-top: 20px;
-
-}
-
-.post-logo-settings 
-{
-    margin-left: 363px;
-    width: 460px;
-}
-
-.input-text 
-{
-    background-image: url('/Myndir/PostText.png');
+    background-image: url('/Myndir/AddGroup.jpg');
     background-repeat: no-repeat;
-    background-size: 100%;
     border: none;
-    cursor: pointer;
-    height: 50px; 
-    margin-left: -228px;
-    width: 15%;
-}
-
-.input-img 
-{
-    background-image: url('/Myndir/PostPicture.png');
-    background-repeat: no-repeat;
-    background-size: 100%;
-    border: none;
-    cursor: pointer;
-    height: 50px;
-    margin-left: 235px;
-    margin-top: 2%;
-    width: 15%;
-}
-
-.input-youtube {
-    background-image: url('/Myndir/PostVideo.png');
-    background-repeat: no-repeat;
-    background-size: 100%;
-    border: none;
-    cursor: pointer;
-    height: 50px;
-    margin-left: 239px;
-    margin-top: -10%;
-    width: 15%;
-}
-
-.post-input {
-    border: none;
-    font-size: 16px;
-    height: 102px;
-    margin-left: 5%;
-    text-align: center;
-    width: 221px;
-}
-
-.post-submit 
-{
-    background-image: url('/Myndir/ButtonBackground.jpg');
-    border-color: #faa61f;
-    border-radius: 4px;
-    font-weight: bold;
-    line-height: 25px;
-    margin-left: 561px;
-    margin-top: 1%;
-    width: 70px;
+    cursor: pointer;   
+    height: 24px;
+    margin-left: 1010px;
+    margin-top: 8px;
+    width: 160px;
 }
 
 .all-posts {
@@ -95,85 +16,10 @@
     margin-top: 5%;
 }
 
-.each-post {
-    border: 1px solid #A8A8A8;
-    margin-left: -35%;
-    margin-right: 13%;
-    padding-top: 2%;
-}
-
-.like-img 
-{
-  background-image: url('/Myndir/Like.png'));
-  background-repeat: no-repeat;
-  background-size: 100%;
-  border: none;
-  cursor: pointer;
-  height: 56px;
-  margin-left: 92%;
-  margin-top: -5%;
-  width: 56px;
-}
-
-.post-name 
-{
-    font-weight: bold;
-    margin-bottom: -4%;
-    margin-left: -32%;
-}
-
-.post-date 
-{
-    font-weight: bold;
-    margin-bottom: 0%;
-    margin-left: 70%;
-}
-
-.post-comment
-{
-    margin-left: -32%;
-    margin-top: 0%;
-}
-
-.number-of-likes 
-{
-    margin-left: 94%;
-}
-
 .comment 
 {
     border-bottom: 1px solid #A8A8A8;
     padding-bottom: 2%;
-}
-
-.whole-each-post 
-{
-    margin-bottom: 27%;
-}
-
-.post-content {
-    width: 90%;
-    margin-left: 2%;
-}
-
-.submit-comment {
-    background-image: url('/Myndir/takkar.jpg');
-    border-color: #faa61f;
-    border-radius: 4px;
-    font-weight: bold;
-    line-height: 23px;
-    margin-left: 2%;
-    margin-top: 1%;
-    width: 50px;
-}
-
-.comment-textarea 
-{
-    background-color: #FDEBB9;
-    border: none;
-    float: left;
-    resize: none;
-    width: 92%;
 }
 
 .CommentDisplay 
@@ -205,6 +51,116 @@
     font-weight: bold;
     margin-left: 2%;
 }
+
+.comment-textarea 
+{
+    background-color: #FDEBB9;
+    border: none;
+    float: left;
+    resize: none;
+    width: 92%;
+}
+
+.each-post {
+    border: 1px solid #A8A8A8;
+    margin-left: -35%;
+    margin-right: 13%;
+    padding-top: 2%;
+}
+
+.group-and-button 
+{
+    margin-bottom: 20px;
+}
+
+.groupName p
+{
+    font-size: 22px;
+    font-weight: bold;
+    margin-left: 548px;
+    margin-top: 20px;
+
+}
+
+.input-img 
+{
+    background-image: url('/Myndir/PostPicture.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    border: none;
+    cursor: pointer;
+    height: 50px;
+    margin-left: 235px;
+    margin-top: 2%;
+    width: 15%;
+}
+
+.input-text 
+{
+    background-image: url('/Myndir/PostText.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    border: none;
+    cursor: pointer;
+    height: 50px; 
+    margin-left: -228px;
+    width: 15%;
+}
+
+.input-youtube {
+    background-image: url('/Myndir/PostVideo.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    border: none;
+    cursor: pointer;
+    height: 50px;
+    margin-left: 239px;
+    margin-top: -10%;
+    width: 15%;
+}
+
+.like-img 
+{
+  background-image: url('/Myndir/Like.png'));
+  background-repeat: no-repeat;
+  background-size: 100%;
+  border: none;
+  cursor: pointer;
+  height: 56px;
+  margin-left: 92%;
+  margin-top: -5%;
+  width: 56px;
+}
+
+.newsfeed 
+{
+    height: 167px;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 6%;
+}
+
+.newsfeed > p 
+{
+    float: left;
+    font-size: 18px;
+    font-weight: bold;
+    margin-left: 39%;
+    margin-top: -5%;
+    width: 61px;
+}
+
+.number-of-likes 
+{
+    margin-left: 94%;
+}
+
+.post
+{
+    border: 1px solid #A8A8A8;
+    margin-top: -50px;
+}
+
 .photo-input
 {
     border: none;
@@ -212,11 +168,44 @@
     margin-left: 136px;
 }
 
-.video-input
+.post-content {
+    width: 90%;
+    margin-left: 2%;
+}
+
+.post-comment
 {
+    margin-left: -32%;
+    margin-top: 0%;
+}
+
+.post-date 
+{
+    font-weight: bold;
+    margin-bottom: 0%;
+    margin-left: 70%;
+}
+
+.post-input {
     border: none;
-    height: 103px;
-    margin-left: 165px;
+    font-size: 16px;
+    height: 102px;
+    margin-left: 5%;
+    text-align: center;
+    width: 221px;
+}
+
+.post-logo-settings 
+{
+    margin-left: 363px;
+    width: 460px;
+}
+
+.post-name 
+{
+    font-weight: bold;
+    margin-bottom: -4%;
+    margin-left: -32%;
 }
 
 .post-size-settings-photo
@@ -234,16 +223,16 @@
     text-align: center;
 }
 
-.add-group 
+.post-submit 
 {
-    background-image: url('/Myndir/AddGroup.jpg');
-    background-repeat: no-repeat;
-    border: none;
-    cursor: pointer;   
-    height: 24px;
-    margin-left: 1010px;
-    margin-top: 8px;
-    width: 160px;
+    background-image: url('/Myndir/ButtonBackground.jpg');
+    border-color: #faa61f;
+    border-radius: 4px;
+    font-weight: bold;
+    line-height: 25px;
+    margin-left: 561px;
+    margin-top: 1%;
+    width: 70px;
 }
 
 .remove-group 
@@ -258,13 +247,25 @@
     width: 208px;
 }
 
-.group-and-button 
-{
-    margin-bottom: 20px;
+.submit-comment {
+    background-image: url('/Myndir/takkar.jpg');
+    border-color: #faa61f;
+    border-radius: 4px;
+    font-weight: bold;
+    line-height: 23px;
+    margin-left: 2%;
+    margin-top: 1%;
+    width: 50px;
 }
 
-.post
+.video-input
 {
-    border: 1px solid #A8A8A8;
-    margin-top: -50px;
+    border: none;
+    height: 103px;
+    margin-left: 165px;
+}
+
+.whole-each-post 
+{
+    margin-bottom: 27%;
 }
