--- a/SozialWebApplication/SozialWebApplication/Content/CSS/Banner.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/Banner.css
@@ -43,7 +43,7 @@ h3
     color: black;
     font-size: 50px;
     font-weight: bold;
-    margin-left: 38px;
+    margin-left: 414px;
     margin-top: 2%;
     position:absolute;
     text-decoration: none;
@@ -58,9 +58,9 @@ h3
   //  font-size: 50px;
    // color: black;
   //  font-weight: bold;
-   // margin-left: 414px;
+   // margin-left: 38px;
   //  position:absolute;
-   // margin-top: 2%;
+    margin-top: 2%;
 }*/
 
 
