--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/EditNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/EditNameCard.cshtml
@@ -43,6 +43,9 @@
                         
                         <label for="input-email" class="label">Email</label>
                         <input type="text" name="input-email" id="input-email" class="text-input" placeholder=@Html.DisplayFor(model => model.userWithId.Email) />
+
+                        <label for="input-picture" class="label">Profile Picture</label>
+                        <input type="text" name="input-picture" id="input-picture" class="text-input" placeholder="Copy image url here..." />
                     </div>
 
                     <input type="submit" value="Save" class="save" />
